compiler/testData/diagnostics/testsWithJsStdLib/module/jsModuleNonExternal.kt
// FIR_IDENTICAL
@file:JsModule("lib")

class <!NON_EXTERNAL_DECLARATION_IN_INAPPROPRIATE_FILE!>A<!> {
    class B

    fun bar() {}
}

<!NON_EXTERNAL_DECLARATION_IN_INAPPROPRIATE_FILE!>fun foo()<!> = "OK"